# WordleSutomSolver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app.cpp
data/: en-words-5.txt  english_words_importer.py  lexique_splitter.py  words-10.txt  words-11.txt  words-12.txt  words-4.txt  words-5.txt  words-6.txt  words-7.txt  words-8.txt  words-9.txt
src/: game.cpp  game.h  gameResolver.cpp  gameResolver.h  utils.cpp  utils.h  word_list.cpp  word_list.h
